Update dependencies, fix gap between task bar and status bar (close #232)

--- a/src/components/tasks/tabs/TaskTabs.css
+++ b/src/components/tasks/tabs/TaskTabs.css
@@ -3,5 +3,5 @@
 }
 
 .ant-tabs-full-height .ant-tabs-tabpane-active {
-    height: calc(100% - 60px);
+    height: 100%;
 }
